hphp/hack/test/typecheck/const_attribute/trait_const_attribute.php.exp
File "trait_const_attribute.php", line 14, characters 7-7:
Cannot assign to a __Const property (Typing[4196])
