hphp/hack/test/typecheck/const_attribute/trait_const_attribute.php
<?hh

trait T {
  <<__Const>>
  public int $x = 4;
}

class C {
  use T;
}

function F() {
  $c = new C();
  $c->x = 42;
}
